--- a/style.css
+++ b/style.css
@@ -1,1 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Inspiration&display=swap');
+
+*{
+    text-decoration: none;
+    list-style-type: none;
+
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 25px 10px 25px;
+    box-shadow: 0 2px 25px 1px rgba(143, 141, 141, 0.438);
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-family: "Inspiration", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    padding-block: 10px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    gap: 45px;
+    padding-block: 10px;
+}
+
+nav div{
+    display: flex;
+    flex-direction: row;
+}
+
+.contact_btn{
+    display: flex;
+    align-items: center;
+    width: 124px;
+    height: 42px;
+    background: linear-gradient(225deg, #6675F7 0%, #57007B 100%);
+    color: white;
+    padding: 14px 25px 14px 25px;
+    border: none;
+    border-radius: 10px;
+}
