--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav div{
 }
 
 .introduction{
+    outline: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,6 +103,25 @@ nav div{
     border-radius: 5px;
     font-weight: 400;
     margin-top: 50px;
+}
+
+.circle{
+    background-color: #b62472;
+    width: 72px;
+    top: 765px;
+    margin-top: px;
+    margin-left: 883px;
+}
+
+.services{
+    display: flex;
+    background-color: #E7DAED;
+}
+.card{
+    outline: auto;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
 }
 
 /*Phone*/
