--- a/style.css
+++ b/style.css
@@ -62,11 +62,10 @@ nav div{
 }
 
 .introduction{
-    outline: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 350px; 
+    padding: 50px 200px 50px 200px; 
 }
 
 .introduction p{
@@ -104,24 +103,71 @@ nav div{
     font-weight: 400;
     margin-top: 50px;
 }
-
 .circle{
-    background-color: #b62472;
-    width: 72px;
-    top: 765px;
-    margin-top: px;
-    margin-left: 883px;
+    position: absolute;
+    margin-left: 30%;
+    z-index: -1;
+}
+.circle_2 {
+    position: relative;
+    margin-left: 5%;
+    z-index: -1;
+    bottom: 35px;
 }
 
-.services{
-    display: flex;
-    background-color: #E7DAED;
-}
-.card{
-    outline: auto;
+.services_container{
+    background-color:#F9F9FF;
+    width: 100%;
+    height: 100%;
+    margin-top: 35px;
     display: flex;
     flex-direction: column;
-    justify-self: center;
+    justify-content: center;
+    border:solid 1px rgba(128, 128, 128, 0.158);
+}
+.services_container h1 {
+    display: flex;
+    text-align: center;
+    align-self: center;
+    padding-top:30px;
+}
+.services{
+    display: flex;
+    margin-top: 0px;
+    padding: 50px 0px;
+    justify-content: center;
+
+}
+.card{
+    width: 333px;
+    height: 287px;
+    display: flex;
+    flex-direction: column;
+    background-color: #FAFAFA;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 5px 0px 25px rgba(128, 128, 128, 0.315);
+}
+
+.card:nth-child(3){
+    margin-top: 50px;
+    margin-bottom: -20px;
+}
+
+.services img{
+    width: 35px;
+    padding: 5px;
+    border: solid #3D63EA 1px;
+    border-radius: 100%;
+}
+.services p{
+    color: gray;
+    font-weight: 300;
+}
+.carousel{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 35px;
 }
 
 /*Phone*/
