--- a/style.css
+++ b/style.css
@@ -170,6 +170,45 @@ nav div{
     padding-bottom: 35px;
 }
 
+.informations_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 50px 150px 50px 200px; 
+    gap: 100px;
+}
+ 
+.information{
+    display: flex;
+    justify-content: space-between;
+    row-gap: 500px;
+}
+
+.text h4{
+    margin: 0;
+    padding-block: 20px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 55px;
+}
+.text p{
+    font-size: 18px;
+    font-weight: 300;
+    color: gray;
+    line-height: 35px;
+}
+.text span{
+    background: linear-gradient(225deg, #F76680 0%, #57007B 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+.see_more{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    padding-top: 20px;
+}
+
 /*Phone*/
 @media screen and (max-width:699px){
 
