--- a/style.css
+++ b/style.css
@@ -147,11 +147,12 @@ nav div{
     padding: 20px;
     margin: 20px;
     box-shadow: 5px 0px 25px rgba(128, 128, 128, 0.315);
+    transition: transform 0.3s ease-in-out;
 }
-
-.card:nth-child(3){
-    margin-top: 50px;
-    margin-bottom: -20px;
+.card:hover{
+    transform: translateY(20px);
+    cursor: pointer;
+    box-shadow: 5px 0px 25px#56007b8f;
 }
 
 .services img{
@@ -174,7 +175,7 @@ nav div{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 50px 150px 50px 200px; 
+    padding: 50px 200px 50px 200px; 
     gap: 100px;
 }
  
@@ -242,6 +243,8 @@ nav div{
     }
 
     .card{
+        display: flex;
+        justify-content: center;
         text-align: center;
         margin:0 ;
     }
@@ -253,6 +256,7 @@ nav div{
     }
 
     .informations_container:not(#video){
+        display: none;
     }
     .circle, .circle_2{
         display: none;
@@ -268,6 +272,14 @@ nav div{
 
     nav div{
         font-size: small;
+   }
+
+   .introduction img{
+    display: ;
+
+   }
+   .introduction img:hover{
+    
    }
 }
 
