--- a/style.css
+++ b/style.css
@@ -177,8 +177,9 @@ nav div{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 50px 200px 50px 200px; 
+    padding-top: 50px;
     gap: 100px;
+    margin-inline: 20%;
 }
  
 .information{
@@ -213,8 +214,8 @@ nav div{
 }
 
 .partner{
+    margin-inline: 20%;
     font-size: 35px;
-    padding-left: 200px;
     padding-top: 200px;
 }
 .partner p{
@@ -228,7 +229,7 @@ nav div{
     display: flex;
     justify-content: flex-end;
     gap: 20px;
-    margin-right: 100px;
+    margin-right: 20%;
 }
 
 
@@ -294,7 +295,9 @@ nav div{
 }
 
 .reviews_arrow{
-    display: absolute;
+    display: flex;
+    justify-content: space-between;
+    outline: auto;
     margin-top:-400px;
     
 }
@@ -311,11 +314,11 @@ nav div{
 /*PORTFOLIO*/
 
 .portfolio_container{
-    background-color: #fafaff;
-    padding: 100px;
+    background-color: #f7f7fa;
     display: flex;
     flex-direction: column;
 }
+
 
 .portfolio_header{
     justify-items: center;
@@ -327,28 +330,47 @@ nav div{
 }
 
 .portfolio{
-    outline: auto;
-    margin-inline: 150px;
+    margin-inline: 20%;
 }
 
 .p_card{
-    outline: solid #6675F7 1px;
     display: flex;
-    border-radius: 0px 10px 10px 0px;
+    border: solid #E7DAED 1px;
+    border-radius: 40px;
+    margin-top: 50px;
+    justify-content: space-between;
+}
+.p_card_img{
+    flex: 1;
+}
+.p_card_img img{
+    width: 100%;
+    height: 100%;
 }
 
 .p_text{
-    padding: 80px 50px;
+    flex: 1;
+    padding: 80px 80px 0px 50px;
     font-weight: 400;
     line-height: 22px;
+    width: 50%;
 }
+.p_text h1{
+    font-weight: 600;
+}
+
 
 .read_more{
     display: flex;
     justify-self: flex-end;
     gap: 5px;
-    margin-top: 140px;
+    margin-top: 40px;
     margin-right: 40px;
+    background: linear-gradient(225deg, #F76680 0%, #57007B 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+
+
 }
 
 /*Phone*/
