--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav div{
 }
 
 .reviews_comment{
-    padding-inline: 200px;
+    margin-inline: 20%;
     text-align: center;
     font-size: 18px;
     color: grey;
@@ -297,7 +297,6 @@ nav div{
 .reviews_arrow{
     display: flex;
     justify-content: space-between;
-    outline: auto;
     margin-top:-400px;
     
 }
@@ -373,15 +372,31 @@ nav div{
 }
 
 .development_container{
-
-display: flex;
+    display: flex;
+    justify-content: center;
 }
-.development_container img{
+.development_container div{
+    display: absolute;
+}
+
+.development_container img:not(.deco-line){
     border: solid 1px gray;
     border-radius: 10px;
     padding: 5px;
     height: 59px ;
     width: 56px;
+}
+.development_card{
+    display: flex;
+    outline: auto;
+    flex-direction: column;
+    margin-inline: 20%;
+}
+.development_column1{
+    flex-direction: column;
+}
+.development_column2{
+    flex-direction: column;
 }
 
 /*Phone*/
